--- a/Tabuada/index.html
+++ b/Tabuada/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <ul>
-    <li><a href="contar.html">Vamos Contar</a></li>
-    <li><a href="tabuada.html">Tabuada</a></li>
+    <li><a href="Tabuada/contar.html">Vamos Contar</a></li>
+    <li><a href="Tabuada/tabuada.html">Tabuada</a></li>
   </ul>
 </body>
 </html>
