--- a/tabuada/tabuada.html
+++ b/tabuada/tabuada.html
@@ -16,7 +16,7 @@
     <section>
         <div>
             <p>Número: <input type="number" name="num" id="txtn">
-                <input type="button" value="GerarTabuada" onclick="tabuada()">
+                <input type="button" value="Gerar Tabuada" onclick="Tabuada()">
             </p>
         </div>
         <div>
