--- a/tabuada/tabuada.html
+++ b/tabuada/tabuada.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tabuada</title>
+    <title>tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
     <header>
-    <h1>Tabuada</h1>
+    <h1>tabuada</h1>
     </header>
     <section>
         <div>
             <p>Número: <input type="number" name="num" id="txtn">
-                <input type="button" value="Gerar Tabuada" onclick="Tabuada()">
+                <input type="button" value="Gerar Tabuada" onclick="tabuada()">
             </p>
         </div>
         <div>
