--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <ul>
-    <li><a href="tabuada/contar.html">Vamos Contar</a></li>
+    <li><a href="contar.html">Vamos Contar</a></li>
     <li><a href="tabuada/tabuada.html">Tabuada</a></li>
   </ul>
 </body>
